# opengl_learning

./: CMakeLists.txt
src/: main.cpp  tutorial1.cpp  tutorial2.cpp  tutorial3.cpp  tutorial4.cpp  tutorial5.cpp
src/shaders/tutorial4/: fragment.glsl  vertex.glsl
src/shaders/tutorial5/: fragment.glsl  vertex.glsl
